Fix header alignment problem

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,7 +5,7 @@
 .Bookstore-CMS {
   width: 15rem;
   height: 2.313rem;
-  margin: 0.375rem 2.938rem 0.125rem 0;
+  margin: 0.375rem 1.038rem 0.125rem 0;
   font-family: Montserrat, sans-serif;
   font-size: 1.875rem;
   font-weight: bold;
@@ -31,7 +31,7 @@ a:active {
   width: 100%;
   height: 5.938rem;
   margin: 0;
-  padding: 1.438rem 6.188rem 1.688rem 6.25rem;
+  padding: 1.438rem 9.088rem 1.688rem 10.75rem;
   background-color: #fff;
 }
 
@@ -47,7 +47,7 @@ a:active {
 nav ul li:first-child {
   width: 3.688rem;
   height: 1rem;
-  margin: 1.125rem 2.563rem 0.688rem 0;
+  margin: 1.125rem 1.063rem 0.688rem 0;
   font-family: Montserrat, sans-serif;
   font-size: 0.813rem;
   font-weight: normal;
